--- a/lecture_6/lecture_6.ipynb
+++ b/lecture_6/lecture_6.ipynb
@@ -26,6 +26,7 @@
     "* Object-oriented Programming in Python\n",
     "* Try-catch\n",
     "* List comprehensions\n",
+    "* Lambda\n",
     "* Decorators\n",
     "* Pickle"
    ]
@@ -489,6 +490,152 @@
     "# input argument\n",
     "time_end = time.time()\n",
     "print(f'Time spent {time_end - time_start}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "common-reconstruction",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Pickle\n",
+    "![alt text](images/pickle.jpg \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "compound-vatican",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> Pickle is used for serializing and de-serializing Python object structures, also called marshalling or flattening. Serialization refers to the process of converting an object in memory to a byte stream that can be stored on disk or sent over a network. Later on, this character stream can then be retrieved and de-serialized back to a Python object.\n",
+    ">\n",
+    "> -- [DataCamp](https://www.datacamp.com/community/tutorials/pickle-python-tutorial#what)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "serious-explosion",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Pickling can be used for saving objects to disk. Can be useful for saving trained machine learning algorithms, complex data structures and dictionaries, lists and so.\n",
+    "\n",
+    "Don't use pickling across various programming languages. Only unpickle data from a trusted source!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "focused-marijuana",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Pickle vs JSON\n",
+    "* JSON is easily read by humans and is agnostic of programming languages.\n",
+    "* Pickled data cannot be read by humans and works only in Python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "architectural-influence",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Using Pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sweet-gregory",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "filename = 'car'\n",
+    "outfile = open(filename,'wb') # 'wb' means write binary\n",
+    "pickle.dump(car,outfile)\n",
+    "outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "official-switzerland",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# reading from pickle file\n",
+    "infile = open(filename,'rb')\n",
+    "new_dict = pickle.load(infile)\n",
+    "infile.close()\n",
+    "new_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faced-compilation",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "You can call ```dump```multiple times to add more objects to your Pickle file. You load in the same order as you dump."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "touched-charles",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Sending Pickle over TCP\n",
+    "You can serialize data and set it over a network. Be sure to send using TCP and not UDP, since TCP ensures that all elements are received in order and are received."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "toxic-mississippi",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "In the case of the car dictionary, it would probably make more sense to save as JSON due to it's readability."
    ]
   }
  ],
