added images to slides

--- a/lecture_6/lecture_6.ipynb
+++ b/lecture_6/lecture_6.ipynb
@@ -25,8 +25,8 @@
     "* Python interpreters\n",
     "* Object-oriented Programming in Python\n",
     "* Try-catch\n",
-    "* List comprehensions\n",
     "* Lambda\n",
+    "* List comprehensions\n",
     "* Decorators\n",
     "* Pickle"
    ]
@@ -43,7 +43,8 @@
     "## Learning goals for today\n",
     "* More familiarity with advanced Python concepts\n",
     "* Tricks and tools for writing better software in Python\n",
-    "* Allow yourself to understand existing Python code better"
+    "* Allow yourself to understand existing Python code better\n",
+    "* Prepare yourself for tricky code coming in the following lectures!"
    ]
   },
   {
@@ -75,6 +76,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "medium-paintball",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Lambda expressions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "breeding-papua",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## List comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "manufactured-explosion",
    "metadata": {
     "slideshow": {
@@ -83,6 +108,18 @@
    },
    "source": [
     "## Decorators\n",
+    "![alt text](images/decorator.png \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "marked-marijuana",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "_Decorators_ are a feature of Python which allows us to alter the functionality of existing code. Decorators allow us to execute code before and after functions the _decorate_.\n",
     "\n",
     "Lots of great examples [here](https://gist.github.com/Zearin/2f40b7b9cfc51132851a)."
@@ -388,14 +425,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "widespread-basketball",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "</''''''\\>\n",
+      "#tomatoes#\n",
+      "--ham--\n",
+      "~salad~\n",
+      "<\\______/>\n"
+     ]
+    }
+   ],
    "source": [
     "def bread(func):\n",
     "    def wrapper():\n",
@@ -494,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "common-reconstruction",
+   "id": "piano-compiler",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -507,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compound-vatican",
+   "id": "rural-applicant",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -521,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serious-explosion",
+   "id": "ranging-frame",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -535,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focused-marijuana",
+   "id": "liquid-making",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -549,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "architectural-influence",
+   "id": "forbidden-malaysia",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -562,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sweet-gregory",
+   "id": "roman-trial",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -586,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-switzerland",
+   "id": "preceding-baltimore",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -603,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-compilation",
+   "id": "laughing-delight",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -615,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "touched-charles",
+   "id": "boring-pencil",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -628,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "toxic-mississippi",
+   "id": "signal-optics",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
