--- a/lecture_6/lecture_6.ipynb
+++ b/lecture_6/lecture_6.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medium-paintball",
+   "id": "suburban-contents",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -87,8 +87,96 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ceramic-construction",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda x: x + 1\n",
+    "\n",
+    "def g(x):\n",
+    "    return x + 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "breeding-papua",
+   "id": "second-national",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In Python the ```filter()```-function takes a function and a list as an  input. To make our code more concise, we could pass a lambda functions as the first argument: - more code examples [here](https://www.programiz.com/python-programming/anonymous-function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "attractive-concentration",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6, 8, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 5, 4, 6, 8, 11, 3, 12]\n",
+    "\n",
+    "# filter integers divisible by two (even numbers)\n",
+    "new_list = list(filter(lambda x: (x%2 == 0) , my_list)) \n",
+    "\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "timely-boundary",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [('Denmark','5792202'), ('Angola','33605183'), ('Iran','84746528')]\n",
+    "lst = lst.sort(key=lambda x:x[1])\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "color-sharing",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "A Lambda function is a small anonymous function meaning that it's defined without a name (the ```def```-keyword). Lambdas are used when we need a anonymous function for a short while."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "understanding-crossing",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -113,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-marijuana",
+   "id": "floppy-walter",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -543,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-compiler",
+   "id": "magnetic-florence",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -556,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-applicant",
+   "id": "successful-hospital",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -570,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranging-frame",
+   "id": "harmful-kelly",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -584,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liquid-making",
+   "id": "forty-numbers",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -598,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forbidden-malaysia",
+   "id": "quantitative-average",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -611,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "roman-trial",
+   "id": "permanent-gauge",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -635,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preceding-baltimore",
+   "id": "beautiful-concord",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -652,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-delight",
+   "id": "occasional-prophet",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -664,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boring-pencil",
+   "id": "married-neighborhood",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -677,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signal-optics",
+   "id": "incoming-hobby",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -686,6 +774,38 @@
    "source": [
     "In the case of the car dictionary, it would probably make more sense to save as JSON due to it's readability."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "going-official",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'htttp://food.com/apionion,tomato,cucumber'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'htttp://food.com/api'\n",
+    "get_widget = \"onion tomato cucumber\"\n",
+    "url = url + get_widget.replace(' ', ',')\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rocky-sleeve",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
